--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 @import-normalize; /* bring in normalize.css styles */
+*,
+::before,
+::after {
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
@@ -12,4 +17,36 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.appstyle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px auto 50px auto;
+}
+.container {
+  margin-left: 50px;
+  margin-top: 50px;
 }
